fixed some typos and made it ready for round tomorrow

--- a/src/Round1/round_1.ipynb
+++ b/src/Round1/round_1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
     "    \"\"\"\n",
     "    Removes random noise from an image using a median filter and saves the denoised image to the specified destination.\n",
     "    Random noise refers to black or white pixels that appear on the screen, similar to old school TVs. This noise can occur due to \n",
-    "    electromagnetic interference, damaged image sensors, or data corru/ion. The median filter removes this noise by changing the \n",
+    "    electromagnetic interference, damaged image sensors, or data corruption. The median filter removes this noise by changing the \n",
     "    value of a distorted pixel to the median value of the pixels around it.\n",
     "    Args:\n",
     "        image_path (str): The file path of the noisy image.\n",
@@ -187,7 +187,7 @@
     "    Args:\n",
     "        image_path (str): The file path of the skewed image to be corrected.\n",
     "        destination_path (str): The file path where the restored image will be saved.\n",
-    "        resolution (tuple, o/ional): The resolution (width, height) of the restored image. \n",
+    "        resolution (tuple, optional): The resolution (width, height) of the restored image. \n",
     "        \n",
     "    Returns:\n",
     "        None\n",
@@ -653,7 +653,7 @@
     "    plt.xlabel('Class')\n",
     "    plt.ylabel('Aspect Ratio (Width/Height)')\n",
     "    plt.tight_layout()\n",
-    "    plt.show()\n"
+    "    plt.show()"
    ]
   },
   {
@@ -669,7 +669,6 @@
     "\n",
     "# Load class names\n",
     "class_names = load_class_names(data_yaml_path)\n",
-    "\n",
     "\n",
     "# Generate all plots\n",
     "plot_class_distribution(class_names, annotations_path)\n",
