end of the competition

--- a/src/Round3/nmap_commands.ipynb
+++ b/src/Round3/nmap_commands.ipynb
@@ -139,6 +139,7 @@
     "\n",
     "# Scan Specific Ports\n",
     "! nmap -p <port(s)> <target>\n",
+    "# ssh port defaults to 22\n",
     "\n",
     "# Scans specific ports (e.g., nmap -p 22,80,443 <target>)."
    ]
