--- a/src/Round3/openssl.ipynb
+++ b/src/Round3/openssl.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "# Import required libraries\n",
+    "import OpenSSL\n",
     "from OpenSSL import crypto, SSL  # Main OpenSSL module for cryptography\n",
     "from cryptography.hazmat.primitives import serialization  # Key serialization\n",
     "from cryptography.hazmat.primitives.asymmetric import padding  # Encryption padding\n",
@@ -400,8 +401,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
